// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cell renders correctly 1`] = `
.emotion-0 {
  display: inline-block;
  height: auto;
  box-sizing: border-box;
  padding: 7px;
  text-align: left;
}

<div
  class="emotion-0 emotion-1"
>
  This is content
</div>
`;

exports[`HeaderCell renders correctly 1`] = `
.emotion-0 {
  text-transform: capitalize;
  font-weight: bold;
  display: inline-block;
  height: auto;
  box-sizing: border-box;
  padding: 7px;
  text-align: left;
}

<div
  class="emotion-0 emotion-1"
>
  This is content
</div>
`;

exports[`TextCell renders correctly 1`] = `
.emotion-0 {
  overflow: hidden;
  overflow: -moz-hidden-unscrollable;
  text-overflow: ellipsis;
  white-space: nowrap;
  display: inline-block;
  height: auto;
  box-sizing: border-box;
  padding: 7px;
  text-align: left;
}

<div
  class="emotion-0 emotion-1"
>
  This is content
</div>
`;
